--- a/Linc's Voice Changer/Base.lproj/Main.storyboard
+++ b/Linc's Voice Changer/Base.lproj/Main.storyboard
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10117" systemVersion="15G31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10117" systemVersion="15G31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="538-o5-QWS">
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
+        <!--Linc's Voice Changer-->
         <scene sceneID="tne-QT-ifu">
             <objects>
                 <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="Linc_s_Voice_Changer" customModuleProvider="target" sceneMemberID="viewController">
@@ -15,14 +15,21 @@
                         <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="eEz-NJ-E7w">
-                                <rect key="frame" x="76" y="240" width="46" height="30"/>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="bTd-Gx-E2S" customClass="HorizontalScroller" customModule="Linc_s_Voice_Changer" customModuleProvider="target">
+                                <rect key="frame" x="0.0" y="64" width="600" height="120"/>
+                                <color key="backgroundColor" red="0.83741801979999997" green="0.83743780850000005" blue="0.83742713930000001" alpha="1" colorSpace="deviceRGB"/>
                                 <constraints>
-                                    <constraint firstAttribute="width" constant="46" id="Sih-B7-tJq"/>
-                                    <constraint firstAttribute="height" constant="30" id="iHV-8F-Ahl"/>
+                                    <constraint firstAttribute="height" constant="120" id="bzw-7G-9P4"/>
+                                </constraints>
+                            </view>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="eEz-NJ-E7w">
+                                <rect key="frame" x="235" y="319" width="46" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="46" id="56x-w0-hbD"/>
+                                    <constraint firstAttribute="height" constant="30" id="q5O-Oq-RqM"/>
                                 </constraints>
                                 <state key="normal" title="Slow" image="snail"/>
                                 <connections>
@@ -30,10 +37,10 @@
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="p3U-Tf-3eU">
-                                <rect key="frame" x="253" y="240" width="46" height="30"/>
+                                <rect key="frame" x="320" y="319" width="46" height="30"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="30" id="1JR-lm-k47"/>
-                                    <constraint firstAttribute="width" constant="46" id="Jet-9x-jJu"/>
+                                    <constraint firstAttribute="height" constant="30" id="DjI-uN-hb4"/>
+                                    <constraint firstAttribute="width" constant="46" id="yRO-ep-XqK"/>
                                 </constraints>
                                 <state key="normal" title="Fast" image="rabbit"/>
                                 <connections>
@@ -41,10 +48,12 @@
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="cQB-v0-8o5">
-                                <rect key="frame" x="196" y="311" width="46" height="30"/>
+                                <rect key="frame" x="320" y="390" width="46" height="30"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="30" id="UDp-F9-mqd"/>
-                                    <constraint firstAttribute="width" constant="46" id="uoe-pa-0yd"/>
+                                    <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="30" id="023-9z-ea6"/>
+                                    <constraint firstAttribute="width" constant="46" id="RQi-cB-yKB"/>
+                                    <constraint firstAttribute="height" constant="30" id="Rnx-ol-rDn"/>
+                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="46" id="m4S-qm-XYl"/>
                                 </constraints>
                                 <state key="normal" title="Play" image="playPause"/>
                                 <connections>
@@ -52,12 +61,10 @@
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleAspectFit" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="yle-16-kRL">
-                                <rect key="frame" x="115" y="304" width="46" height="44"/>
+                                <rect key="frame" x="235" y="383" width="46" height="44"/>
                                 <constraints>
-                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="42" id="1U1-vR-gOa"/>
-                                    <constraint firstAttribute="height" constant="44" id="ZOO-vb-Rb6"/>
-                                    <constraint firstAttribute="width" constant="46" id="g8U-4W-tRK"/>
-                                    <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="43" id="jDu-zi-vW9"/>
+                                    <constraint firstAttribute="width" constant="46" id="Q3b-3L-PhR"/>
+                                    <constraint firstAttribute="height" constant="44" id="nwr-QN-43w"/>
                                 </constraints>
                                 <state key="normal" title="Record" image="record"/>
                                 <connections>
@@ -67,27 +74,68 @@
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstItem="eEz-NJ-E7w" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" constant="220" id="5gG-Fv-gAg"/>
                             <constraint firstItem="yle-16-kRL" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" constant="99" id="7lh-eM-PPH"/>
+                            <constraint firstItem="cQB-v0-8o5" firstAttribute="leading" secondItem="yle-16-kRL" secondAttribute="trailing" constant="39" id="8Ae-wD-ty0"/>
+                            <constraint firstItem="p3U-Tf-3eU" firstAttribute="leading" secondItem="eEz-NJ-E7w" secondAttribute="trailing" constant="39" id="9Kf-wG-rtK"/>
                             <constraint firstItem="cQB-v0-8o5" firstAttribute="leading" secondItem="yle-16-kRL" secondAttribute="trailing" constant="35" id="BMn-6p-dtK"/>
-                            <constraint firstItem="eEz-NJ-E7w" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" constant="60" id="ht9-dv-u97"/>
-                            <constraint firstItem="cQB-v0-8o5" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" constant="291" id="jdt-Bk-jSH"/>
-                            <constraint firstItem="p3U-Tf-3eU" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" constant="220" id="mIS-Oi-91S"/>
+                            <constraint firstItem="bTd-Gx-E2S" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" constant="-20" id="Ebi-bF-VHJ"/>
+                            <constraint firstItem="eEz-NJ-E7w" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" constant="215" id="I29-XJ-8Bo"/>
+                            <constraint firstItem="yle-16-kRL" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" constant="215" id="cbT-Uq-Oyb">
+                                <variation key="widthClass=compact" constant="115"/>
+                            </constraint>
+                            <constraint firstItem="cQB-v0-8o5" firstAttribute="centerY" secondItem="yle-16-kRL" secondAttribute="centerY" id="dBG-ok-IMn"/>
+                            <constraint firstItem="bTd-Gx-E2S" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" id="fzt-gh-sDI"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="bTd-Gx-E2S" secondAttribute="trailing" constant="-20" id="iZ1-Y3-7PZ"/>
+                            <constraint firstItem="eEz-NJ-E7w" firstAttribute="top" secondItem="bTd-Gx-E2S" secondAttribute="bottom" constant="135" id="qd7-EE-QEc">
+                                <variation key="widthClass=compact" constant="142"/>
+                            </constraint>
                             <constraint firstItem="yle-16-kRL" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" constant="284" id="rC0-D7-AhS"/>
-                            <constraint firstAttribute="trailingMargin" secondItem="p3U-Tf-3eU" secondAttribute="trailing" constant="60" id="x33-bt-6lM"/>
+                            <constraint firstItem="yle-16-kRL" firstAttribute="top" secondItem="eEz-NJ-E7w" secondAttribute="bottom" constant="34" id="vko-JH-2HY"/>
+                            <constraint firstItem="p3U-Tf-3eU" firstAttribute="centerY" secondItem="eEz-NJ-E7w" secondAttribute="centerY" id="wKg-Sn-CiA"/>
+                            <constraint firstItem="eEz-NJ-E7w" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" constant="215" id="zdF-R4-8T4">
+                                <variation key="widthClass=compact" constant="115"/>
+                            </constraint>
                         </constraints>
+                        <variation key="default">
+                            <mask key="constraints">
+                                <exclude reference="I29-XJ-8Bo"/>
+                                <exclude reference="7lh-eM-PPH"/>
+                                <exclude reference="rC0-D7-AhS"/>
+                                <exclude reference="BMn-6p-dtK"/>
+                            </mask>
+                        </variation>
                     </view>
-                    <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina47"/>
+                    <navigationItem key="navigationItem" title="Linc's Voice Changer" id="rHo-Lx-T7i"/>
+                    <simulatedOrientationMetrics key="simulatedOrientationMetrics"/>
                     <connections>
                         <outlet property="btFast" destination="yle-16-kRL" id="BCO-i2-EoU"/>
                         <outlet property="btPlay" destination="cQB-v0-8o5" id="Q7d-LR-t9Q"/>
                         <outlet property="btRecord" destination="yle-16-kRL" id="WA2-3F-Wl7"/>
                         <outlet property="btSlow" destination="eEz-NJ-E7w" id="xfm-mk-fUt"/>
+                        <outlet property="scroller" destination="bTd-Gx-E2S" id="7FT-Sd-26d"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="454.5" y="391.5"/>
+            <point key="canvasLocation" x="1120" y="367"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="g5w-sb-sD8">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="538-o5-QWS" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="0fX-O6-Dae">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="rootViewController" id="cl5-2F-i8M"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="FuT-om-N3a" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="454" y="409"/>
         </scene>
     </scenes>
     <resources>
